<resources>

    <string name="username">\u0020Username</string>
    <string name="password">\u0020Password</string>
    <string name="login">Login</string>
    <string name="newuser">New User?</string>
    <string name="repassword">\u0020Retype Password</string>
    <string name="firstname">\u0020First name</string>
    <string name="lastname">\u0020Last name</string>
    <string name="email">\u0020Email</string>
    <string name="age">\u0020Age</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="hello_blank_fragment">Hello, I am a blank fragment!</string>
    <string name="nav_header_desc">User Profile Picture</string>
    <string name="nav_header_title">Currently signed in as:</string>
    <string name="nav_header_subtitle">profile@email.com</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Close</string>
    <string name="title_activity_home">Group And Got</string>
    <string name="home_blank_text">Home Fragment Test String</string>
    <string name="hint_email">\u0020 Enter Email</string>
    <string name="hint_password">\u0020  Enter Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="desc_beachfit_logo">Group And Go Logo</string>

    <string name="emailpassword_title_text">Welcome to Group And Go!</string>

    <string name="home">Home</string>
    <string name="share">Share</string>
    <string name="error_weak_password">Must be 6 characters minimum.</string>
    <string name="error_invalid_email">Invalid email.</string>
    <string name="error_user_exists">Email already used.</string>
    <string name="error_mismatched_passwords">Passwords must match.</string>
    <string name="error_invalid_age">Age must be between 1-99.</string>
    <string name="required_field">Required.</string>
    <string name="log_meal">Log Meal</string>
    <string name="search_food_database">Search Food Database</string>
    <string name="calorie_calculator">Calorie Calculator</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="type">Type:</string>
    <string name="exercise_type">Exercise Type</string>
    <string name="level">Level:</string>
    <string name="exercise_level">Exercise Level</string>
    <string name="muscle">Muscle:</string>
    <string name="main_muscle_worked">Main Muscle Worked</string>
    <string name="equipment">Equipment:</string>
    <string name="equipment_needed">Equipment Needed</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="instructions">Instructions</string>
    <string name="watch_video">Watch Video</string>
    <string name="Send_Reset_Email">Send Reset Email</string>
    <string name="player_error">Error initializing YouTube player: %s</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>
    <string name="mm_dd_yyyy">MM/DD/YYYY</string>
    <string name="contact_us_send_any_questions_and_concerns_to_beachfit_firebase_app_com">Contact Us! Send Any Questions and Concerns to beachfit@firebase.app.com</string>
    <string name="num_hint">####</string>
    <string name="exercise_label">Exercise</string>
    <string name="name_edit">Name</string>
    <string name="points_value">Points Value</string>
    <string name="goalnamepage">Goal Name</string>
    <string name="exname">Exercise Name</string>
    <string name="points_values">Points Value:</string>
    <string name="status">Status:</string>
    <string name="complete_exclamation">Complete!</string>
    <string name="back">BACK</string>
    <string name="signed_out">Sign In to Begin</string>
    <string name="auth_failed">Authentication Failed.</string>
    <string name="app_name">Group And Go: Event Planner</string>
</resources>
