<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/event_background"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:contentDescription="@string/desc_gag_logo"
            android:src="@drawable/main_page_icon"
            app:layout_constraintBottom_toTopOf="@+id/status"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#BC1A1919"
            android:backgroundTint="#F5000000"
            android:textColor="#F7F3F3"
            android:textSize="24sp"
            android:text="@string/signed_out"
            app:layout_constraintBottom_toTopOf="@+id/fieldEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/icon" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:background="@drawable/round"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/fieldPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/round"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/login_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldEmail" />


        <LinearLayout
            android:id="@+id/login_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginLeft="70dp"
            android:layout_marginEnd="70dp"
            android:layout_marginRight="70dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fieldPassword"
            app:layout_constraintVertical_bias="0.447">

            <Button
                android:id="@+id/forgotPasswordButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="186dp"
                android:layout_height="36dp"
                android:text="@string/Forgot_Password"
                android:onClick="passwordReset"
                android:visibility="visible"
                android:textColorHighlight="#3F51B5"
                android:textColorLink="#3F51B5"
                android:backgroundTint="#418FCF"
                android:drawable="@drawable/rectangle"/>

            <Button
                android:id="@+id/signOutButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_out"
                android:visibility="visible"
                android:textColorHighlight="#3F51B5"
                android:textColorLink="#3F51B5"
                android:backgroundTint="#418FCF"
                android:drawable="@drawable/rectangle"
                android:drawableRight="@drawable/cancel"
                android:drawablePadding="-25dp"/>

            <Button
                android:id="@+id/verifyEmailButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verify_email"
                android:visibility="visible"
                android:drawable="@drawable/rectangle"
                android:textColorHighlight="#3F51B5"
                android:textColorLink="#3F51B5"
                android:backgroundTint="#418FCF"
                android:drawableRight="@drawable/email"
                android:drawablePadding="-25dp"/>

            <Button
                android:id="@+id/emailSignInButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:visibility="gone"
                android:backgroundTint="#418FCF"
                android:background="@drawable/rectangle"
                android:drawableRight="@drawable/signin"
                android:drawablePadding="-25dp"/>

            <Button
                android:id="@+id/emailCreateAccountButton"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_account"
                android:visibility="gone"
                android:drawable="@drawable/rectangle"
                android:backgroundTint="#418FCF"
                android:drawableRight="@drawable/create"
                android:drawablePadding="-25dp"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>